@@ -77,4 +77,14 @@ class ConfigurationServersTest < Test::Unit::TestCase
     task = new_task(:testing, @config, :roles => :web)
     assert_equal %w(app1 app2 app3).sort, @config.find_servers_for_task(task, :roles => :app).map { |s| s.host }.sort
   end
+
+  def test_find_servers_with_lambda_for_hosts_should_be_evaluated
+    assert_equal %w(foo), @config.find_servers(:hosts => lambda { "foo" }).map { |s| s.host }.sort
+    assert_equal %w(bar foo), @config.find_servers(:hosts => lambda { %w(foo bar) }).map { |s| s.host }.sort
+  end
+
+  def test_find_servers_with_lambda_for_roles_should_be_evaluated
+    assert_equal %w(app1 app2 app3), @config.find_servers(:roles => lambda { :app }).map { |s| s.host }.sort
+    assert_equal %w(app2 file), @config.find_servers(:roles => lambda { [:report, :file] }).map { |s| s.host }.sort
+  end
 end
